--- a/Controle Livros/app/src/main/res/layout/activity_dashboard.xml
+++ b/Controle Livros/app/src/main/res/layout/activity_dashboard.xml
@@ -64,15 +64,15 @@
         android:id="@+id/button_dashboard"
         android:layout_width="56dp"
         android:layout_height="56dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginBottom="32dp"
         android:background="@drawable/fundo"
         android:elevation="20dp"
+        android:stateListAnimator="@null"
         android:text="+"
         android:textColor="@android:color/white"
         android:textSize="30sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:stateListAnimator="@null"/>
+        app:layout_constraintEnd_toEndOf="parent" />
 </android.support.constraint.ConstraintLayout>
